@@ -1,5 +1,11 @@
 2005-06-16  Eric Anholt  <anholt@FreeBSD.org>
 
+	* libswfdec/swf.c:
+	* libswfdec/tags.h:
+	Document a couple more tag names.  Couldn't find what MX4 is.
+
+2005-06-16  Eric Anholt  <anholt@FreeBSD.org>
+
 	* libswfdec/swfdec_shape.c: (swf_shape_add_styles),
 	(swfdec_shape_compose):
 	Add support for fill style type 0x42 and 0x43, the unsmoothed versions
